# mcnugget

./: .gitignore  Auto Instrumentation Sheet.numbers  Auto Instrumentation Sheet.xlsx  README.md  a.py  credentials.json  delete_this.py  pyproject.toml  requirements.txt  scrape-ni.py  ~$Auto Instrumentation Sheet.xlsx
archive/: 405-relief-valve-4-18-2024-test1.csv  Offsets_Test_Feb_4.xlsx  a.py  fuel_flowmeter_waterflow.py  pitot_pressure.py  pyproject.toml  valve_timing.py
archive/405-relief-valve/: pull_test_data.py
archive/atlo/: cda.py  copv_press.py  fanno_flow.ipynb  gooster.py
archive/autosequences/: gse_sim.py  phoenix.txt  press_fill.py  simulate.sh  valve_check.py
archive/bang-bang-tpc/: Conductivity.csv  Heat_Capacity.csv  System_Unit_Test  TPC_gse_hotfire.py  quick_CdA.py
archive/blowdown/: TUTORIAL.txt  blowdown_model.py
archive/cli/: input.py  testing.xlsx
archive/client/: __init__.py
archive/daq/: ambient_sim.py  ambientize.py  main.py  main_old_1.py  processing.py  pt_configuration.py  rename_channels.py  valve_timing.py
archive/engine-sim/: engine_sim.py
archive/examples/: coldflows_data.py
archive/hard-start-data-recovery/: filter_data.py  grab_specific_data.py  key_mappings.json  rename_data.py
archive/mass-flow-calcs/: Mass Flow Calculator.py
archive/summer-2023-chamber-analysis/: Colbrook_White.py  Conductivity.csv  Stress.py  class_init.py
archive/sw-meetings/: 02-12-typing.ts
archive/tests/: Auto Instrumentation Sheet 2.numbers  Auto Instrumentation Sheet.numbers  Auto Instrumentation Sheet.xlsx
atlo/: PV_flowrate.py  copv_ap.py  goostercalc.py  mass_flow_rate.py  ws.ipynb
atlo/pnids/: Limelight_Stencil.vssx
atlo/turbopump/: putty_460800.csv  putty_new.csv  test_2_data.csv
autosequences/: SRE_README.md  _hotfire.py  average_all.py  average_one_channel.py  burst_test_sim.py  check_channels.py  coldflow_sim.py  config.py  diego_auto.py  flowmeter.py  flowmeter_arbitrary.py  flowmeter_sim.py  hotfire.py  hotfire_new.py  hydro.py  hydro_auto.py  igniter.py  igniter.txt  launch.py  modified_hotfire.py  press_fill.py  rocket_sim.py  sim.json  simulate.py  sine_wave.py  spark.py  syauto.py  testconfig.py  torch_igniter.py  torch_sim.py  ultimate_sim.py  valve_timings.py
autosequences/bryn_jopo/: test_auto.py
autosequences/config/: test.json
autosequences/launch/: README.md  autosequence_utils.py  autosequence_utils.py.bak  config.yaml  configuration.py  launch.py  main.py  mappings.yaml  pyproject.toml
autosequences/old autosequences/: feb_3_autosequence.py  recovery_bay_sequence.py  test_abort_sequence.py
autosequences/old_autosequences/: fuel_bang_bang.py  hotfire.py  hotfire_autosequence.py  hydro.py  press_auto_sims.py  press_fill_meh.py  running_average_test.py
autosequences/torch/: config.yaml  pyproject.toml  torch.py
daq/: README.md  SynnaxBackup.ps1  ambientize.py  auto_channels.py  create_channels.py  lc_configuration.py  main.py  main2.py  main3.py  main_old_2.py  ni_configuration.py  processing.py  pt_configuration.py  tc_configuration.py  thermo_magic.py  valve_timing.py
docs/: 0001-tank-auto.md
examples/: active.py  channel_average.py  differentiation.py  integration.py  simple_line_plot.ipynb  simple_line_plot.py
mclib/: README.md  pyproject.toml
mclib/src/mclib/: __init__.py  autosequence.py  average.py  config.py  logger.py  phase.py  system.py  utils.py
mcnugget/: 12_11_twenty_percent (2).csv  12_11_twenty_percent.csv  PV_flowrate  PV_flowrate.py  a.py  bottle_discharge_.ipynb  cda.py  copv_ap.py  copv_press.py  credentials.json  data_processing.ipynb  flowrate.py  fluid_calcs.py  fuel_flowmeter_waterflow.py  gooster.py  goostercalc.py  log_processing.ipynb  mass_flow_rate.py  pitot_pressure  pitot_temperature  pitot_temperature.py  prepress_regfire.py  putty.csv  putty_100k.csv  putty_10_29_5_33.csv  putty_new2k.csv  read_flash.py  refprop_functions.py  test_3_data.csv  tests.py  tpc.py  valve_timing.py
scripts/: file_processing.py  file_processing_alternative.py  install_certs_macos.sh  install_certs_windows.ps1  transfer.sh
security/: synnax-ca.crt
simulation/: .dockerignore  aliases.yaml  config.yaml  configuration.py  main.py  press-sim.yaml  pyproject.toml  sim_out.txt  simulation.py  simulation_utils.py  simulation_utils.py.bak  system.py
simulation/docker/: Dockerfile  README.md  docker-compose.yml  run_sim.sh
tests/: Auto Instrumentation Sheet.xlsx  test_instrument.py
(+294 files in other folders)
