[tool.poetry]
name = "mcnugget"
version = "0.1.0"
description = "The McNugget of Data Analysis"
authors = ["emiliano bonilla <ebonilla@synnaxlabs.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
toml = "^0.10.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pyfluids = "^2.3.2"
synnax = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.synnax]
host = "synnax.masa.engin.umich.edu"
port = 80
username = "synnax"
password = "seldon"
secure = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
