[tool.poetry]
name = "mcnugget"
version = "0.1.0"
description = "The McNugget of Data Analysis"
authors = ["emiliano bonilla <ebonilla@synnaxlabs.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "autosequences" }
]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
toml = "^0.10.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pyfluids = "^2.3.2"
click = "^8.1.7"
gspread = "^5.12.0"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
refprop-connector = "^0.3.7"
requests = "^2.31.0"
synnax = "0.34.0"
pynput = "^1.7.7"
pandas = ">=2.0.2,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
