[project]
name = "mclib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack Hammerberg", email = "jackmh@umich.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "synnax==0.49.0",
    "termcolor>=3.3.0",
]

[project.scripts]
mclib = "mclib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
