[project]
name = "mclib"
version = "0.1.0"
description = "A Python library and command-line interface for mclib."
readme = "README.md"
authors = [
    { name = "Jack Hammerberg", email = "jackmh@umich.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "synnax==0.49.0",
    "termcolor>=3.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
