[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coolprop>=6.6",
    "pyyaml>=6.0.3",
    "synnax>=0.55,<0.56",
    "termcolor>=3.2.0",
    "yaspin>=3.3.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
