[project]
name = "torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mclib",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0.3",
    "synnax==0.49.0",
    "termcolor>=3.3.0",
    "yaspin>=3.4.0",
]

[tool.uv.sources]
mclib = { path = "../../mclib" }
